# xiapi

./: Cargo.toml  LICENSE  README.md
examples/: xi_sample.rs  xi_sample_multicamera.rs  xi_sample_save_color_image.rs  xi_sample_short_interval_shutter.rs
src/: camera.rs  image.rs  lib.rs  roi.rs
