[package]
name = "xiapi"
version = "0.1.0"
edition = "2021"
rust-version = "1.59.0"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
xiapi-sys = { git = "https://github.com/Ximea-GmbH/xiapi-sys.git" }
paste = "1.0.6"
image = { version = "0.24.2", optional= true}


[dev-dependencies]
serial_test = { version = "0.6.0", features = ["file_locks"] }
approx = "0.5.1"

[[example]]
name = "xi_sample"
path = "examples/xi_sample.rs"

[features]
default = ["image"]
image = ["dep:image"]