[package]
name = "xiapi"
version = "0.1.4"
edition = "2021"
rust-version = "1.70.0"
license = "MIT"
description = "High-level API bindings for XIMEA Cameras"
homepage = "https://www.ximea.com"
repository = "https://github.com/Ximea-GmbH/xiapi"
readme = "README.md"
keywords = ["ximea", "bindings", "camera", "image"]
categories = ["api-bindings"]

[dependencies]
xiapi-sys = "0.1.2"
paste = "1.0.14"
image = { version = "0.24.8", optional= true}


[dev-dependencies]
serial_test = { version = "3.0.0", features = ["file_locks"] }
approx = "0.5.1"

[[example]]
name = "xi_sample"
path = "examples/xi_sample.rs"

[features]
default = ["image"]
image = ["dep:image"]